@@ -21,7 +21,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --no-conditional-dependencies --no-libtool --macro-prefix=gl --no-vc-files argz getopt gettext mbchar mbiter mbscasecmp mbschr mbslen mbsncasecmp mbsstr mbswidth memmem mkstemp strdup strerror xalloc xsetenv
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --no-conditional-dependencies --no-libtool --macro-prefix=gl --no-vc-files argz getopt-gnu gettext mbchar mbiter mbscasecmp mbschr mbslen mbsncasecmp mbsstr mbswidth memmem mkstemp strdup-posix strerror xalloc xsetenv
 
 AUTOMAKE_OPTIONS = 1.5 gnits subdir-objects
 
@@ -396,6 +396,15 @@ EXTRA_DIST += lstat.c
 EXTRA_libgnu_a_SOURCES += lstat.c
 
 ## end   gnulib module lstat
+
+## begin gnulib module malloc-posix
+
+
+EXTRA_DIST += malloc.c
+
+EXTRA_libgnu_a_SOURCES += malloc.c
+
+## end   gnulib module malloc-posix
 
 ## begin gnulib module malloca
 
@@ -845,14 +854,14 @@ EXTRA_libgnu_a_SOURCES += stpcpy.c
 
 ## end   gnulib module stpcpy
 
-## begin gnulib module strdup
+## begin gnulib module strdup-posix
 
 
 EXTRA_DIST += strdup.c
 
 EXTRA_libgnu_a_SOURCES += strdup.c
 
-## end   gnulib module strdup
+## end   gnulib module strdup-posix
 
 ## begin gnulib module streq
 
